# s-arch

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
assets/styles/: input.css
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: context.rs  generator.rs  lib.rs
crates/codegen/src/frontend/: api_client.rs  dioxus.rs  mod.rs  pages.rs
crates/codegen/src/migrations/: mod.rs  sql.rs
crates/codegen/src/rust/: auth.rs  cargo.rs  config.rs  error.rs  handlers.rs  main_rs.rs  middleware.rs  mod.rs  models.rs  routes.rs  test_gen.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ir/: Cargo.toml
crates/ir/src/: endpoint.rs  entity.rs  field.rs  lib.rs  project.rs  relationship.rs  relationship_helpers.rs  serialization.rs  validation.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  file_ops.rs  lib.rs  state.rs
crates/ui/src/components/: canvas.rs  connection.rs  endpoint_card.rs  entity_card.rs  field_row.rs  inputs.rs  mod.rs  port.rs  properties.rs
crates/ui/src/components/dialogs/: confirm_delete.rs  data_type_selector.rs  endpoint_dialog.rs  entity_dialog.rs  field_dialog.rs  mod.rs  relationship_dialog.rs  validation_editor.rs
crates/ui/src/hooks/: mod.rs  use_canvas.rs  use_connection.rs
crates/ui/src/pages/: code_generation.rs  endpoints.rs  entity_design.rs  mod.rs  project_setup.rs  relationships.rs  welcome.rs
docs/: COMPREHENSIVE_SPECIFICATION.md  IMPLEMENTATION_PLAN.md  QUICK_START_GUIDE.md
src/: main.rs
