[package]
name = "imortal_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for Immortal Engine"
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Date/Time
chrono = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4"
