[package]
name = "imortal_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dioxus Desktop UI for Immortal Engine"

[dependencies]
# Internal crates
imortal_core = { workspace = true }
imortal_ir = { workspace = true }
imortal_codegen = { workspace = true }

# Dioxus UI Framework
dioxus = { workspace = true }

# File dialogs
rfd = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Unique identifiers
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Regex for validation
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
